# njord-quant

./: .gitignore  .pre-commit-config.yaml  =24.1  AGENTS.md  AUDIT.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  ROADMAP_REFACTOR_PLAN.md  TESTING.md  docker-compose.test.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backtest/: contracts.py  engine.py  equity_tracker.py  fill_simulator.py  metrics.py  param_sweep.py  portfolio_engine.py  report.py  runner.py
config/: alerts.yaml  base.yaml  portfolio.yaml  strategies.yaml
controller/: __init__.py  contracts.py  metadata.py  process_manager.py  registry.py  reload.py
core/: broker.py  bus.py  config.py  contracts.py  journal.py  journal_reader.py  kill_switch.py  logging.py  time.py
docs/: ADR-0001-foundation.md  AGENT_PROMPTS.md  research_guide.md
execution/: adapters.py  base.py  contracts.py  iceberg.py  performance.py  pov.py  router.py  simulator.py  slippage.py  twap.py  vwap.py
portfolio/: __init__.py  allocation.py  contracts.py  position_sizer.py  rebalancer.py  report.py  risk_adjusted.py  tracker.py
research/: __init__.py  aggregator.py  cli.py  comparison.py  data_reader.py  export.py  notebook_helpers.py  performance.py  validator.py
risk/: rules.py
scripts/: compress_journals.py  metrics_cleanup.py  njord_kill.py  roadmap_nav.py  seed_db.sql  show_next.py  show_status.py  split_roadmap.py  test_roadmap_refactor.sh
strategies/: base.py  context.py  manager.py  registry.py
systemd/: njord-paper.service  njord-risk.service
telemetry/: __init__.py  aggregation.py  alerts.py  (+7 more)
(+168 files in other folders)
