[project]
name = "njord-quant"
version = "0.0.1"
description = "Local-first, event-driven crypto trading stack using ccxt.pro"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Njord Trust"}]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
