[project]
name = "njord-quant"
version = "0.0.1"
description = "Local-first, event-driven crypto trading stack using ccxt.pro"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Njord Trust"}]
dependencies = [
    "structlog>=24.1",
    "redis>=5.0",
    "pandas>=2.2",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[project.optional-dependencies]
research = [
    "pandas>=2.0",
    "pandas-stubs>=2.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "types-matplotlib>=3.7",
    "jupyter>=1.0",
    "notebook>=7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
